add privacy polisy flag and fix roles issue
